validate: 2026-03-02-how-to-configure-nexus-repository-for-container-images-on-ubuntu